# oz7class

./: .gitignore  chapter4.ipynb  data.json  oz_fullstack.yaml  package-lock.json  pyproject.toml
.elasticbeanstalk/: config.yml
livesession/aws/: index.html  index.php  lambda_function.py  lambda_funtion.py  summary.ipynb  upload_image.py
livesession/dblive/: ERD_SQL.sql  amazon_db.mwb  amazon_db.mwb.bak
livesession/eb-fastapi/: Procfile  main.py
livesession/scrapping/: index.html  kream.py  naver.py  s_naver.py
practice/: cote.ipynb  cote1.py  for.py  if_for_while.py
task/: Ch04_task(code).ipynb  Ch04_task.ipynb  level2.ipynb  level3.ipynb
task/admin-project/: admin.html  admin.js  mypage.html  signup.html  signup.js
task/db01-06/: chapter01_06.ipynb
task/db07-13/: chapter07_13(정답).ipynb  chapter07_13.ipynb
task/db14-20/: task_db1420.sql  task_db1420_answer.sql
task/db21-27/: petHotelERD.mwb  pet_hotel.sql  실습문제(초급).sql
task/fastapi_assignment/: main.py  pyproject.toml
task/fastapi_assignment/app/models/: users.py
task/fastapi_assignment/app/schemas/: users.py
task/fastapi_movie/: main.py
task/fastapi_movie2/: main.py
task/flask1/: app.py
task/t01-04/: level1.ipynb
task/t05-08/: 0508_level1.ipynb  0508_level2.ipynb  0508_level3.ipynb  Ch05_task.ipynb  Chapter0508_과제.ipynb
task/t09-13/: Ch09_task.ipynb  Chaoter0113_task(초보용).ipynb  Chaper0913_task.ipynb
task/t14-16/: Ch14_task.ipynb  Chaoter0116_task.ipynb  Chaper1416_task.ipynb  data.json
task/t17-20/: Chapter0120_task.ipynb  (+1 more)
vod/: oz_fullstack.yaml  oz_test2.yaml
(+290 files in other folders)
