[tool.poetry]
name = "oz7class"
version = "0.1.0"
description = ""
authors = ["god-gy <god.gy0321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.4"
annotated = "^0.0.2"
fastapi = "^0.121.3"
uvicorn = "^0.38.0"
passlib = "^1.7.4"
fastapi-jwt = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
