[tool.poetry]
name = "fastapi-assignment"
version = "0.1.0"
description = ""
authors = ["god-gy <god.gy0321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.2"
uvicorn = "^0.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
